<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:id="@+id/fragment_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fragment_item_container_principal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/fragment_item_img_circle_container">


            <ImageView
                android:id="@+id/fragment_item_img_circle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_fiber_manual_record_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="10"
            android:id="@+id/fragment_item_description_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/fragment_item_description_un">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sujet"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/txt_fragment_sujet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="Heure"
                    android:layout_marginRight="10dp"
                    android:id="@+id/txt_fragment_horaire"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="Lieu"
                    android:layout_marginRight="10dp"
                    android:id="@+id/txt_fragment_lieu"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:id="@+id/fragment_item_description_deux">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Participants"
                    android:layout_margin="5dp"
                    android:id="@+id/txt_fragment_participants"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/but_fragment_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/ic_delete_black_24dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>