<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <item
        android:id="@+id/menu_filtre"
        android:title="Filtrer"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom">

        <menu>
            <item
                android:id="@+id/salle_filter"
                android:title="Filtrer par salle"
                app:showAsAction="collapseActionView|ifRoom"
                app:actionViewClass="androidx.appcompat.widget.SearchView" />

            <item
                android:id="@+id/date_filter"
                android:title="Filtrer par date"
                app:showAsAction="collapseActionView|ifRoom" />

            <item
                android:id="@+id/reset_filter"
                android:title="Reset filtre"
                app:showAsAction="collapseActionView|ifRoom" />
        </menu>

    </item>

</menu>